# xi-qt2

./: .drone.yml  .gitignore  meson.build  xi-qt2.pro
assets/: resources.qrc
src/: editor.cpp  editor.h  editor.hpp  global_types.hpp  json_types.cpp  json_types.hpp  line.cpp  line.h  main.cpp  mainwindow.cpp  mainwindow.h  rpc_handler.cpp  rpc_handler.hpp  view.cpp  view.hpp
